--- a/Fashion mnist(ANN).ipynb
+++ b/Fashion mnist(ANN).ipynb
@@ -69,7 +69,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 3,
       "id": "b36a5666-900e-4acb-b9a4-5739b02cb85b",
       "metadata": {
         "id": "b36a5666-900e-4acb-b9a4-5739b02cb85b"
@@ -127,16 +127,16 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "IPnv2E8GOXfp",
-        "outputId": "23fc683c-619e-4ce2-a6da-b7dfdaed33dd"
+        "outputId": "32c42d9f-2d93-4aa9-8da8-abaa0f118b7a"
       },
       "id": "IPnv2E8GOXfp",
-      "execution_count": 6,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Using device: cuda\n"
+            "Using device: cpu\n"
           ]
         }
       ]
@@ -896,8 +896,8 @@
       "cell_type": "code",
       "source": [
         "# Create train & test loader\n",
-        "train_loader = DataLoader(train_dataset, batch_size=128, shuffle=True, pin_memory=True)\n",
-        "test_loader = DataLoader(test_dataset, batch_size=128, shuffle=False, pin_memory=True)\n",
+        "train_loader = DataLoader(train_dataset, batch_size=64, shuffle=True, num_workers=4, pin_memory=True)\n",
+        "test_loader = DataLoader(test_dataset, batch_size=64, shuffle=False, num_workers=4, pin_memory=True)\n",
         "# larger batch size utilize GPU memory\n",
         "# pin_memory=True on DataLoader(speed up)"
       ],
@@ -906,6 +906,215 @@
       },
       "id": "1t-bMqyzBtbN",
       "execution_count": 17,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Hyperparameter tuning using optuna"
+      ],
+      "metadata": {
+        "id": "w69hi8Mcjpws"
+      },
+      "id": "w69hi8Mcjpws"
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Define NN Class\n",
+        "class NeuralNetwork(nn.Module):\n",
+        "  def __init__(self, input_dim, output_dim, num_hidden_layers, neurons_per_layer, dropout_rate):\n",
+        "    super().__init__()\n",
+        "\n",
+        "    layers = []\n",
+        "\n",
+        "    for i in range(num_hidden_layers):\n",
+        "      layers.append(nn.Linear(input_dim, neurons_per_layer))\n",
+        "      layers.append(nn.BatchNorm1d(neurons_per_layer))\n",
+        "      layers.append(nn.ReLU())\n",
+        "      layers.append(nn.Dropout(p=dropout_rate))\n",
+        "      input_dim = neurons_per_layer\n",
+        "\n",
+        "    layers.append(nn.Linear(input_dim, output_dim))\n",
+        "\n",
+        "    self.model = nn.Sequential(*layers)\n",
+        "\n",
+        "  def forward(self, x):\n",
+        "    return self.model(x)"
+      ],
+      "metadata": {
+        "id": "CbR72_6EtDS8"
+      },
+      "id": "CbR72_6EtDS8",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Objective function\n",
+        "def objective(trial):\n",
+        "\n",
+        "  # next hyperparameter values from the search space\n",
+        "  num_hidden_layers = trial.suggest_int('num_hidden_layers', 1, 5)\n",
+        "  neurons_per_layer = trial.suggest_int('neurons_per_layer', 8, 128, step=8)\n",
+        "  epochs = trial.suggest_int(\"epochs\", 10, 50, step=10)\n",
+        "  lr = trial.suggest_float(\"learning_rate\", 1e-5, 1e-1, log=True)\n",
+        "  dropout_rate = trial.suggest_float(\"dropout_rate\", 0.1, 0.5, step=0.1)\n",
+        "  batch_size = trial.suggest_categorical(\"batch_size\", [16, 32, 64, 128])\n",
+        "  optimizer_name = trial.suggest_categorical(\"optimizer\", ['Adam', 'SGD', 'RMSprop'])\n",
+        "  weight_decay = trial.suggest_float(\"weight_decay\", 1e-5, 1e-3, log=True)\n",
+        "\n",
+        "  # model init\n",
+        "  input_dim = 784\n",
+        "  output_dim = 10\n",
+        "\n",
+        "  model = NeuralNetwork(input_dim, output_dim, num_hidden_layers, neurons_per_layer)\n",
+        "  model = model.to(device)\n",
+        "\n",
+        "  # optimizer selection\n",
+        "  loss_fn = nn.CrossEntropyLoss()\n",
+        "  optimizer = optim.SGD(model.parameters(), lr=lr, weight_decay=1e-4)\n",
+        "\n",
+        "  if optimizer_name == 'Adam':\n",
+        "    optim.Adam(model.parameters(), lr=lr, weight_decay=weight_decay)\n",
+        "  elif optimizer_name == 'SGD':\n",
+        "    optim.SGD(model.parameters(), lr=lr, weight_decay=weight_decay)\n",
+        "  else:\n",
+        "    optim.RMSprop(model.parameters(), lr=lr, weight_decay=weight_decay)\n",
+        "\n",
+        "\n",
+        "  # training loop\n",
+        "  for epoch in range(epochs):\n",
+        "    for batch_features, batch_labels in train_loader:\n",
+        "      # move to GPU\n",
+        "      batch_features = batch_features.to(device)\n",
+        "      batch_labels = batch_labels.to(device)\n",
+        "      # forward pass\n",
+        "      y_pred = model(batch_features)\n",
+        "      # loss calculate\n",
+        "      loss = loss_fn(y_pred, batch_labels)\n",
+        "      # clear gradients\n",
+        "      optimizer.zero_grad()\n",
+        "      # backward pass\n",
+        "      loss.backward()\n",
+        "      # parameters update\n",
+        "      optimizer.step()\n",
+        "\n",
+        "  # Set model to eval model\n",
+        "  model.eval()\n",
+        "\n",
+        "  # evaluation on test data\n",
+        "  total = 0\n",
+        "  correct = 0\n",
+        "\n",
+        "  with torch.no_grad():\n",
+        "    for batch_features, batch_labels in test_loader:\n",
+        "      # move to GPU\n",
+        "      batch_features = batch_features.to(device)\n",
+        "      batch_labels = batch_labels.to(device)\n",
+        "\n",
+        "      y_pred = model(batch_features)\n",
+        "      _, predicted = torch.max(y_pred.data, 1)\n",
+        "      total += batch_labels.size(0)\n",
+        "      correct += (predicted == batch_labels).sum().item()\n",
+        "\n",
+        "  accuracy = correct / total\n",
+        "  return accuracy\n"
+      ],
+      "metadata": {
+        "id": "L3FUQspwjoRg"
+      },
+      "id": "L3FUQspwjoRg",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!pip install optuna"
+      ],
+      "metadata": {
+        "collapsed": true,
+        "id": "x_8hjFMREz6K",
+        "outputId": "b6a0bfda-c2a3-42e7-b916-6df4fb33b4b4",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "id": "x_8hjFMREz6K",
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Collecting optuna\n",
+            "  Downloading optuna-4.2.1-py3-none-any.whl.metadata (17 kB)\n",
+            "Collecting alembic>=1.5.0 (from optuna)\n",
+            "  Downloading alembic-1.14.1-py3-none-any.whl.metadata (7.4 kB)\n",
+            "Collecting colorlog (from optuna)\n",
+            "  Downloading colorlog-6.9.0-py3-none-any.whl.metadata (10 kB)\n",
+            "Requirement already satisfied: numpy in /usr/local/lib/python3.11/dist-packages (from optuna) (1.26.4)\n",
+            "Requirement already satisfied: packaging>=20.0 in /usr/local/lib/python3.11/dist-packages (from optuna) (24.2)\n",
+            "Requirement already satisfied: sqlalchemy>=1.4.2 in /usr/local/lib/python3.11/dist-packages (from optuna) (2.0.38)\n",
+            "Requirement already satisfied: tqdm in /usr/local/lib/python3.11/dist-packages (from optuna) (4.67.1)\n",
+            "Requirement already satisfied: PyYAML in /usr/local/lib/python3.11/dist-packages (from optuna) (6.0.2)\n",
+            "Collecting Mako (from alembic>=1.5.0->optuna)\n",
+            "  Downloading Mako-1.3.9-py3-none-any.whl.metadata (2.9 kB)\n",
+            "Requirement already satisfied: typing-extensions>=4 in /usr/local/lib/python3.11/dist-packages (from alembic>=1.5.0->optuna) (4.12.2)\n",
+            "Requirement already satisfied: greenlet!=0.4.17 in /usr/local/lib/python3.11/dist-packages (from sqlalchemy>=1.4.2->optuna) (3.1.1)\n",
+            "Requirement already satisfied: MarkupSafe>=0.9.2 in /usr/local/lib/python3.11/dist-packages (from Mako->alembic>=1.5.0->optuna) (3.0.2)\n",
+            "Downloading optuna-4.2.1-py3-none-any.whl (383 kB)\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m383.6/383.6 kB\u001b[0m \u001b[31m7.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25hDownloading alembic-1.14.1-py3-none-any.whl (233 kB)\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m233.6/233.6 kB\u001b[0m \u001b[31m16.7 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25hDownloading colorlog-6.9.0-py3-none-any.whl (11 kB)\n",
+            "Downloading Mako-1.3.9-py3-none-any.whl (78 kB)\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m78.5/78.5 kB\u001b[0m \u001b[31m6.1 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25hInstalling collected packages: Mako, colorlog, alembic, optuna\n",
+            "Successfully installed Mako-1.3.9 alembic-1.14.1 colorlog-6.9.0 optuna-4.2.1\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import optuna\n",
+        "\n",
+        "study = optuna.create_study(direction='maximize')\n",
+        "study.optimize(objective, n_trials=10)"
+      ],
+      "metadata": {
+        "id": "TN3japc6E4CH"
+      },
+      "id": "TN3japc6E4CH",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "study.best_value"
+      ],
+      "metadata": {
+        "id": "GW8EGzSPFs1b"
+      },
+      "id": "GW8EGzSPFs1b",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "study.best_params"
+      ],
+      "metadata": {
+        "id": "t7_wrxiSF4IN"
+      },
+      "id": "t7_wrxiSF4IN",
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1234,7 +1443,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# evaluation on test data\n",
+        "# evaluation on test\n",
         "total = 0\n",
         "correct = 0\n",
         "\n",
@@ -1293,11 +1502,11 @@
         "print(f'Accuracy: {accuracy}')"
       ],
       "metadata": {
-        "id": "OsKiUl6VZakc",
-        "outputId": "7e5f399f-d3ff-4491-d35c-c4d84a5ea9cf",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "OsKiUl6VZakc",
+        "outputId": "7e5f399f-d3ff-4491-d35c-c4d84a5ea9cf"
       },
       "id": "OsKiUl6VZakc",
       "execution_count": 24,
