--- a/Fashion mnist(CNN).ipynb
+++ b/Fashion mnist(CNN).ipynb
@@ -15,11 +15,11 @@
       "execution_count": 1,
       "id": "b36a5666-900e-4acb-b9a4-5739b02cb85b",
       "metadata": {
-        "id": "b36a5666-900e-4acb-b9a4-5739b02cb85b",
-        "outputId": "baecfc19-2cf7-4cb6-a602-6ddd34a3974e",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "b36a5666-900e-4acb-b9a4-5739b02cb85b",
+        "outputId": "baecfc19-2cf7-4cb6-a602-6ddd34a3974e"
       },
       "outputs": [
         {
@@ -43,11 +43,11 @@
         "!kaggle datasets download -d zalando-research/fashionmnist"
       ],
       "metadata": {
-        "id": "EsaUW7bCG34U",
-        "outputId": "a22e7d30-b0db-4de0-854c-37a92a2b6b9a",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "EsaUW7bCG34U",
+        "outputId": "a22e7d30-b0db-4de0-854c-37a92a2b6b9a"
       },
       "id": "EsaUW7bCG34U",
       "execution_count": 2,
@@ -107,11 +107,11 @@
         "torch.manual_seed(42)"
       ],
       "metadata": {
-        "id": "cfd7-w9vHMYF",
-        "outputId": "674c5745-4d47-4ca5-cbf4-8889a7000ab1",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "cfd7-w9vHMYF",
+        "outputId": "674c5745-4d47-4ca5-cbf4-8889a7000ab1"
       },
       "id": "cfd7-w9vHMYF",
       "execution_count": 5,
@@ -136,11 +136,11 @@
         "print(f'Using device: {device}')"
       ],
       "metadata": {
-        "id": "rWx4L105HS_0",
-        "outputId": "6f9b94d7-46b2-4ef5-e9ea-7e2599774986",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "rWx4L105HS_0",
+        "outputId": "6f9b94d7-46b2-4ef5-e9ea-7e2599774986"
       },
       "id": "rWx4L105HS_0",
       "execution_count": 6,
@@ -173,12 +173,12 @@
         "df_train.head()"
       ],
       "metadata": {
-        "id": "ZOC3AhI7HY8s",
-        "outputId": "fbb0b269-abe5-40b7-da30-82df117efc7a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 236
-        }
+        },
+        "id": "ZOC3AhI7HY8s",
+        "outputId": "fbb0b269-abe5-40b7-da30-82df117efc7a"
       },
       "id": "ZOC3AhI7HY8s",
       "execution_count": 8,
@@ -617,12 +617,12 @@
         "plt.show()\n"
       ],
       "metadata": {
-        "id": "UJYf4Io2HfVr",
-        "outputId": "6bf34dd7-ba1c-4156-86ea-006bc9b9882c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
-        }
+        },
+        "id": "UJYf4Io2HfVr",
+        "outputId": "6bf34dd7-ba1c-4156-86ea-006bc9b9882c"
       },
       "id": "UJYf4Io2HfVr",
       "execution_count": 9,
@@ -677,11 +677,11 @@
         "X_train"
       ],
       "metadata": {
-        "id": "SKfJU1ljHo2Q",
-        "outputId": "b5911ced-ee6e-49f9-cebb-18725e47a571",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "SKfJU1ljHo2Q",
+        "outputId": "b5911ced-ee6e-49f9-cebb-18725e47a571"
       },
       "id": "SKfJU1ljHo2Q",
       "execution_count": 12,
@@ -707,6 +707,42 @@
     {
       "cell_type": "markdown",
       "source": [
+        "# Data Augmentations"
+      ],
+      "metadata": {
+        "id": "emUqKLgUuD_8"
+      },
+      "id": "emUqKLgUuD_8"
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from torchvision import transforms\n",
+        "\n",
+        "# Define data augmentations for the training dataset\n",
+        "train_transform = transforms.Compose([\n",
+        "    transforms.ToPILImage(),\n",
+        "    transforms.RandomRotation(10),\n",
+        "    transforms.RandomHorizontalFlip(p=0.5),\n",
+        "    transforms.RandomAffine(0, translate=(0.1, 0.1)),\n",
+        "    transforms.ToTensor()\n",
+        "])\n",
+        "\n",
+        "test_transform = transforms.Compose([\n",
+        "    transforms.ToPILImage(),\n",
+        "    transforms.ToTensor()\n",
+        "])"
+      ],
+      "metadata": {
+        "id": "tBK3FjKwuDAT"
+      },
+      "id": "tBK3FjKwuDAT",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "# Create Dataset & DataLoader"
       ],
       "metadata": {
@@ -717,18 +753,20 @@
     {
       "cell_type": "code",
       "source": [
-        "# Create custom dataset class\n",
         "class CustomDataset(Dataset):\n",
+        "    def __init__(self, features, labels, transform=None):\n",
+        "        self.features = torch.tensor(features, dtype=torch.float32).reshape(-1, 1, 28, 28)\n",
+        "        self.labels = torch.tensor(labels, dtype=torch.long)\n",
+        "        self.transform = transform\n",
         "\n",
-        "  def __init__(self, feautures, labels):\n",
-        "    self.feautures = torch.tensor(feautures, dtype=torch.float32).reshape(-1, 1, 28, 28)\n",
-        "    self.labels = torch.tensor(labels, dtype=torch.long)\n",
+        "    def __getitem__(self, index):\n",
+        "        feature, label = self.features[index], self.labels[index]\n",
+        "        if self.transform:\n",
+        "            feature = self.transform(feature.squeeze(0).numpy())  # Apply transform\n",
+        "        return feature, label\n",
         "\n",
-        "  def __len__(self):\n",
-        "    return len(self.feautures)\n",
-        "\n",
-        "  def __getitem__(self, index):\n",
-        "    return self.feautures[index], self.labels[index]"
+        "    def __len__(self):\n",
+        "        return len(self.features)"
       ],
       "metadata": {
         "id": "sQmvANTzIBdP"
@@ -740,9 +778,9 @@
     {
       "cell_type": "code",
       "source": [
-        "# Create train_dataset & test_dataset\n",
-        "train_dataset = CustomDataset(X_train, y_train)\n",
-        "test_dataset = CustomDataset(X_test, y_test)"
+        "# Use augmentations in training data\n",
+        "train_dataset = CustomDataset(X_train, y_train, transform=train_transform)\n",
+        "test_dataset = CustomDataset(X_test, y_test, transform=test_transform)"
       ],
       "metadata": {
         "id": "PStFntW6ITMv"
@@ -825,6 +863,158 @@
       "outputs": []
     },
     {
+      "cell_type": "code",
+      "source": [
+        "# Define the dynamic CNN model class\n",
+        "class DynamicCNN(nn.Module):\n",
+        "    def __init__(self, num_conv_layers, num_filters, kernel_size, num_fc_layers, fc_layer_size, dropout_rate):\n",
+        "        super(DynamicCNN, self).__init__()\n",
+        "        layers = []\n",
+        "        in_channels = 1  # Grayscale images have 1 input channel\n",
+        "\n",
+        "        # Convolutional layers\n",
+        "        for _ in range(num_conv_layers):\n",
+        "            layers.append(nn.Conv2d(in_channels, num_filters, kernel_size=kernel_size, padding='same'))\n",
+        "            layers.append(nn.ReLU())\n",
+        "            layers.append(nn.BatchNorm2d(num_filters))\n",
+        "            layers.append(nn.MaxPool2d(kernel_size=2, stride=2))\n",
+        "            in_channels = num_filters  # Update input channels for the next layer\n",
+        "\n",
+        "        self.features = nn.Sequential(*layers)\n",
+        "\n",
+        "        # Fully connected layers\n",
+        "        fc_layers = [nn.Flatten()]\n",
+        "        input_size = num_filters * (28 // (2 ** num_conv_layers)) ** 2\n",
+        "        for _ in range(num_fc_layers):\n",
+        "            fc_layers.append(nn.Linear(input_size, fc_layer_size))\n",
+        "            fc_layers.append(nn.ReLU())\n",
+        "            fc_layers.append(nn.Dropout(dropout_rate))\n",
+        "            input_size = fc_layer_size\n",
+        "        fc_layers.append(nn.Linear(input_size, 10))  # Final layer for 10 classes\n",
+        "\n",
+        "        self.classifier = nn.Sequential(*fc_layers)\n",
+        "\n",
+        "    def forward(self, x):\n",
+        "        x = self.features(x)\n",
+        "        x = self.classifier(x)\n",
+        "        return x\n"
+      ],
+      "metadata": {
+        "id": "GNQzx-3Mu2Tl"
+      },
+      "id": "GNQzx-3Mu2Tl",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Using optuna"
+      ],
+      "metadata": {
+        "id": "oaqeHU40u_5X"
+      },
+      "id": "oaqeHU40u_5X"
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Define the objective function for Optuna\n",
+        "def objective(trial):\n",
+        "    # Hyperparameters to tune\n",
+        "    num_conv_layers = trial.suggest_int('num_conv_layers', 1, 3)\n",
+        "    num_filters = trial.suggest_categorical('num_filters', [16, 32, 64, 128])\n",
+        "    kernel_size = trial.suggest_categorical('kernel_size', [3, 5])\n",
+        "    num_fc_layers = trial.suggest_int('num_fc_layers', 1, 3)\n",
+        "    fc_layer_size = trial.suggest_categorical('fc_layer_size', [64, 128, 256])\n",
+        "    dropout_rate = trial.suggest_uniform('dropout_rate', 0.2, 0.5)\n",
+        "    weight_decay = trial.suggest_loguniform('weight_decay', 1e-5, 1e-2)\n",
+        "    learning_rate = trial.suggest_loguniform('learning_rate', 1e-4, 1e-2)\n",
+        "    optimizer_name = trial.suggest_categorical('optimizer', ['SGD', 'Adam', 'RMSprop'])\n",
+        "    batch_size = trial.suggest_categorical('batch_size', [32, 64, 128])\n",
+        "    num_epochs = trial.suggest_int('num_epochs', 10, 30)\n",
+        "\n",
+        "    # Model\n",
+        "    model = DynamicCNN(num_conv_layers, num_filters, kernel_size, num_fc_layers, fc_layer_size, dropout_rate).to(device)\n",
+        "\n",
+        "    # Data\n",
+        "    train_loader = DataLoader(train_dataset, batch_size=batch_size, shuffle=True)\n",
+        "    test_loader = DataLoader(test_dataset, batch_size=batch_size, shuffle=False)\n",
+        "\n",
+        "    # Optimizer\n",
+        "    if optimizer_name == 'SGD':\n",
+        "        optimizer = optim.SGD(model.parameters(), lr=learning_rate, weight_decay=weight_decay)\n",
+        "    elif optimizer_name == 'Adam':\n",
+        "        optimizer = optim.Adam(model.parameters(), lr=learning_rate, weight_decay=weight_decay)\n",
+        "    elif optimizer_name == 'RMSprop':\n",
+        "        optimizer = optim.RMSprop(model.parameters(), lr=learning_rate, weight_decay=weight_decay)\n",
+        "\n",
+        "    # Loss function\n",
+        "    criterion = nn.CrossEntropyLoss()\n",
+        "\n",
+        "    # Training loop\n",
+        "    for epoch in range(num_epochs):\n",
+        "        model.train()\n",
+        "        for batch_features, batch_labels in train_loader:\n",
+        "            batch_features, batch_labels = batch_features.to(device), batch_labels.to(device)\n",
+        "            optimizer.zero_grad()\n",
+        "            outputs = model(batch_features)\n",
+        "            loss = criterion(outputs, batch_labels)\n",
+        "            loss.backward()\n",
+        "            optimizer.step()\n",
+        "\n",
+        "    # Validation loop\n",
+        "    model.eval()\n",
+        "    correct = 0\n",
+        "    total = 0\n",
+        "    with torch.no_grad():\n",
+        "        for batch_features, batch_labels in test_loader:\n",
+        "            batch_features, batch_labels = batch_features.to(device), batch_labels.to(device)\n",
+        "            outputs = model(batch_features)\n",
+        "            _, predicted = torch.max(outputs, 1)\n",
+        "            total += batch_labels.size(0)\n",
+        "            correct += (predicted == batch_labels).sum().item()\n",
+        "\n",
+        "    accuracy = correct / total\n",
+        "    return accuracy"
+      ],
+      "metadata": {
+        "id": "ebf9iO1cu-9Y"
+      },
+      "id": "ebf9iO1cu-9Y",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Run the Optuna study\n",
+        "pruner = optuna.pruners.MedianPruner()\n",
+        "study = optuna.create_study(direction='maximize', pruner=pruner)\n",
+        "study.optimize(objective, n_trials=50)  # Run 50 trials"
+      ],
+      "metadata": {
+        "id": "uiwobslMvJQ1"
+      },
+      "id": "uiwobslMvJQ1",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Print the best hyperparameters and accuracy\n",
+        "print(\"Best hyperparameters:\", study.best_params)\n",
+        "print(\"Best accuracy:\", study.best_value)"
+      ],
+      "metadata": {
+        "id": "DTxO5rqDvL1e"
+      },
+      "id": "DTxO5rqDvL1e",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
       "source": [
         "# Important Parametes"
@@ -901,11 +1091,11 @@
         "  print(f'Epoch: {epoch + 1}, Loss: {loss.item()}')"
       ],
       "metadata": {
-        "id": "5TPPg2TcN2A2",
-        "outputId": "9ccbed4c-ec29-4b05-dbfd-53335cdcfe60",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "5TPPg2TcN2A2",
+        "outputId": "9ccbed4c-ec29-4b05-dbfd-53335cdcfe60"
       },
       "id": "5TPPg2TcN2A2",
       "execution_count": 19,
@@ -1053,11 +1243,11 @@
         "print(f'Accuracy: {accuracy}')"
       ],
       "metadata": {
-        "id": "RlMuKwuCOKJc",
-        "outputId": "6b9a21eb-728c-4a59-dee9-e51b6a9e044f",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "RlMuKwuCOKJc",
+        "outputId": "6b9a21eb-728c-4a59-dee9-e51b6a9e044f"
       },
       "id": "RlMuKwuCOKJc",
       "execution_count": 20,
@@ -1093,11 +1283,11 @@
         "print(f'Accuracy: {accuracy}')"
       ],
       "metadata": {
-        "id": "s2G9e1yhONCq",
-        "outputId": "70a83030-e26c-478c-8df5-dea52db8b998",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "s2G9e1yhONCq",
+        "outputId": "70a83030-e26c-478c-8df5-dea52db8b998"
       },
       "id": "s2G9e1yhONCq",
       "execution_count": 21,
